update README.md file with demo presentation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8361b8a285.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
-    <title>Global Summit</title>
+    <title>Kano Global Summit</title>
 </head>
 <body>
     <main class="main">
@@ -23,7 +23,7 @@
             </div>
             <div class="manu-bar">
                 <ul class="menu-bar-items">
-                    <li class="summit-bar-logo"><img src="./img/menu-bar-logo.svg" alt="" ></li>
+                    <li class="summit-bar-logo"><a href="index.html"><img class="main-kano-logo" src="./img/global-summit-logo.png" alt="" ></a></li>
                     <li><a class="link-to-about" href="about.html"><h2 class="menu-item">About</h2></li></a>
                     <li><h2 class="menu-item">Program</h2></li>
                     <li><h2 class="menu-item">Join</h2></li>
@@ -65,14 +65,14 @@
                 <div class="home-body">
                     <div class="home-title">
                         <h1 class="hello-main">"Hello! Sharing world"</h1>
-                        <h2 class="main-header-text-main">Creative commons <br> global summit <br> 2015</h2>
+                        <h2 class="main-header-text-main">Kano state <br> tech summit <br> 2015</h2>
                     </div>
                     <div class="description">
-                        <h3 class="description-text">A joyful celebration believing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.</h3>
+                        <h3 class="description-text">A joyful celebration believing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Kano State - Nigeria.</h3>
                     </div>
                     <div class="date-time">
                         <h3 class="time">
-                            Now open from 12PM ~ 12AM
+                            2015.10.11(THU) ~ 12(FRI)
                         </h3>
                         <h3 class="venue">
                             @ No. 1 Nassarawa Hospital Road, Kano.
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="join-us" id="join">
-                <h3 class="join-us-text">Join CC Global Summit 2015</h3>
+                <h3 class="join-us-text">Join our Kano Tech Summit 2015</h3>
             </div>
             <div class="whole-program">
                 <h3 class="whole-prgram-text">See the whole program</h3>
