--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </div>
         <div class="manu-bar">
             <ul class="menu-bar-items">
-                <li class="summit-bar-logo"><img src="./img/menu-bar-logo.svg" alt="" ></li>
+                <li class="summit-bar-logo"><a href="index.html"><img class="main-kano-logo" src="./img/global-summit-logo.png" alt="" ></a></li>
                 <li><h2 class="menu-item">About</h2></li>
                 <li><h2 class="menu-item">Program</h2></li>
                 <li><h2 class="menu-item">Join</h2></li>
@@ -35,7 +35,7 @@
     
         <div class="header-section">
             <h1 class="hello-about">"Hello! Sharing world"</h1>
-            <h2 class="main-header-text-about">creative commons <br> global summit 2015</h2>
+            <h2 class="main-header-text-about">Kano state <br> tech summit 2015</h2>
         </div>
         <div class="about-description">
             <h3 class="about-description-text">
@@ -48,26 +48,25 @@
                 So if you're active and engaged in the worlds of open content and knowledge - free software advocates, wikipedians, Open knowledge, galleries, libraries, museums, archives, governments and foundations, lawyers, and activists - we hope you'll consider joining us this year to build a stronger, more vibrant commons together</h3>
         </div>
         <div class="about-contact">
-            <h3 class="first-line">Please contact us per Email for nay further questions about CC Global Summit 2015!</h3>
-            <h3 class="second-line">ccsummit2015@cckorea.org</h3>
+            <h3 class="first-line">Please contact us per Email for nay further questions about Kano State Tech Summit 2015!</h3>
+            <h3 class="second-line">techsummit2015@kano.org</h3>
         </div>
     </div>
     <ul class="creative-common-section">
-        <li class="creative-common-text-one">Creative Commons <br> Global Summit 2015 Logo</li>
-        <li class="creative-common-text-one-desktop">Creative Commons Global Summit 2015 Logo</li>
+        <li class="creative-common-text-one">Kano State <br> Tech Summit 2015 Logo</li>
+        <li class="creative-common-text-one-desktop">Kano State Tech Summit 2015 Logo</li>
         <i class="fa-solid fa-horizontal-rule line-red-about"></i>
         <li class="creative-common-text-two">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.</li>
         <li class="creative-common-text-two-desktop">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.
             After online public voting and Selection Committee’s judging process, the logo from Naresh Agrawal won the prize.
             After consultation with Mr. Agrawal, we optimized the prize-winning-logo for this year’s summit as follows:</li>
-
-        <li><img src="./img/global-summit-logo.svg" alt="" class="global-summit-logo"></li>
+        <li><img src="./img/global-summit-logo.png" alt="" class="global-summit-logo"></li>
     </ul>
     <div class="see-the-past">
         <ul class="see-the-past-items">
-            <li class="see-the-past-text-one">See the past CC Global Summits</li>
+            <li class="see-the-past-text-one">See the past Kano State Tech Summits</li>
             <i class="fa-solid fa-horizontal-rule line-red-about"></i>
-            <li class="see-the-past-text-two">Take a look at the past two CC Global Summits which took place in Buenos Aires and in Warsaw</li>
+            <li class="see-the-past-text-two">Take a look at the past two Kano State Tech Summits which took place in Dawanau and in Hadejia</li>
         </ul>
     </div>
     <div class="past-images">
