Update changes of design as recommended

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main class="main">
-        <section class="desktop-menu-bar">
+        <header class="desktop-menu-bar">
             <div class="top-bar">
                 <ul class="top-bar-elements">
                 <li><i class="fa-brands fa-facebook-f social-bar"></i></li>
@@ -32,7 +32,7 @@
                     <li><h2 class="cc">CC Campaign</h2></li>
                 </ul>
             </div>
-        </section>
+        </header>
         <section class="background-pic">
             <nav>
                 <div class="nav-bar">
@@ -175,7 +175,11 @@
             </div>
             <i class="fa-solid fa-horizontal-rule line-red-main"></i>
         </div>
-        <div id="speakers-container"></div>
+        <div id="speakers-container" class="container-speaker"></div>
+        <div class="see-more-bar">
+            <h3 class="more" id="showplus">MORE</h3>
+            <i class="fa-sharp fa-solid fa-angle-down arrow-down"></i>
+        </div>
         <div class="partner" id="sponsor">
             <div class="partner-header">
                 <h3 class="partner-text">Partners</h3>
