--- a/about.html
+++ b/about.html
@@ -31,48 +31,51 @@
             </ul>
         </div>
     </section>
-    <div class="background-about-picture">
-    
-        <div class="header-section">
-            <h1 class="hello-about">"Hello! Sharing world"</h1>
-            <h2 class="main-header-text-about">Kano state <br> tech summit 2015</h2>
+    <section>
+        <div class="background-about-picture">
+            <div class="header-section">
+                <h1 class="hello-about">"Hello! Sharing world"</h1>
+                <h2 class="main-header-text-about">Kano state <br> tech summit 2015</h2>
+            </div>
+            <div class="about-description">
+                <h3 class="about-description-text">
+                    The Global Summit brings together the community of  
+                    experts, academics, and activists who comprise the Creative Commons affiliate network in a different country every two years.
+                    This year, we hope to expand our invitation list including organizations and individuals.
+                </h3>
+                <h3 class="about-description-text-desktop">The Global Summit brings together the community of experts, academics, and activists who comprise the Creative Commons affiliate network in a different country every two years.
+                    This year, we hope to expand our invitation list including organizations and individuals who want to work with us on shared projects that advance the cause of the Commons, free culture and open knowledge.
+                    So if you're active and engaged in the worlds of open content and knowledge - free software advocates, wikipedians, Open knowledge, galleries, libraries, museums, archives, governments and foundations, lawyers, and activists - we hope you'll consider joining us this year to build a stronger, more vibrant commons together</h3>
+            </div>
+            <div class="about-contact">
+                <h3 class="first-line">Please contact us per Email for nay further questions about Kano State Tech Summit 2015!</h3>
+                <h3 class="second-line">techsummit2015@kano.org</h3>
+            </div>
         </div>
-        <div class="about-description">
-            <h3 class="about-description-text">
-                The Global Summit brings together the community of  
-                experts, academics, and activists who comprise the Creative Commons affiliate network in a different country every two years.
-                This year, we hope to expand our invitation list including organizations and individuals.
-            </h3>
-            <h3 class="about-description-text-desktop">The Global Summit brings together the community of experts, academics, and activists who comprise the Creative Commons affiliate network in a different country every two years.
-                This year, we hope to expand our invitation list including organizations and individuals who want to work with us on shared projects that advance the cause of the Commons, free culture and open knowledge.
-                So if you're active and engaged in the worlds of open content and knowledge - free software advocates, wikipedians, Open knowledge, galleries, libraries, museums, archives, governments and foundations, lawyers, and activists - we hope you'll consider joining us this year to build a stronger, more vibrant commons together</h3>
-        </div>
-        <div class="about-contact">
-            <h3 class="first-line">Please contact us per Email for nay further questions about Kano State Tech Summit 2015!</h3>
-            <h3 class="second-line">techsummit2015@kano.org</h3>
-        </div>
-    </div>
-    <ul class="creative-common-section">
-        <li class="creative-common-text-one">Kano State <br> Tech Summit 2015 Logo</li>
-        <li class="creative-common-text-one-desktop">Kano State Tech Summit 2015 Logo</li>
-        <i class="fa-solid fa-horizontal-rule line-red-about"></i>
-        <li class="creative-common-text-two">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.</li>
-        <li class="creative-common-text-two-desktop">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.
-            After online public voting and Selection Committee’s judging process, the logo from Naresh Agrawal won the prize.
-            After consultation with Mr. Agrawal, we optimized the prize-winning-logo for this year’s summit as follows:</li>
-        <li><img src="./img/global-summit-logo.png" alt="" class="global-summit-logo"></li>
-    </ul>
-    <div class="see-the-past">
-        <ul class="see-the-past-items">
-            <li class="see-the-past-text-one">See the past Kano State Tech Summits</li>
+    </section>
+    <section>
+        <ul class="creative-common-section">
+            <li class="creative-common-text-one">Kano State <br> Tech Summit 2015 Logo</li>
+            <li class="creative-common-text-one-desktop">Kano State Tech Summit 2015 Logo</li>
             <i class="fa-solid fa-horizontal-rule line-red-about"></i>
-            <li class="see-the-past-text-two">Take a look at the past two Kano State Tech Summits which took place in Dawanau and in Hadejia</li>
+            <li class="creative-common-text-two">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.</li>
+            <li class="creative-common-text-two-desktop">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.
+                After online public voting and Selection Committee’s judging process, the logo from Naresh Agrawal won the prize.
+                After consultation with Mr. Agrawal, we optimized the prize-winning-logo for this year’s summit as follows:</li>
+            <li><img src="./img/global-summit-logo.png" alt="" class="global-summit-logo"></li>
         </ul>
-    </div>
-    <div class="past-images">
-        <img src="./img/past-image-1.svg" alt="" class="see-the-past-pic">
-        <img src="./img/past-image-2.svg" alt="" class="see-the-past-pic">
-    </div>
+        <div class="see-the-past">
+            <ul class="see-the-past-items">
+                <li class="see-the-past-text-one">See the past Kano State Tech Summits</li>
+                <i class="fa-solid fa-horizontal-rule line-red-about"></i>
+                <li class="see-the-past-text-two">Take a look at the past two Kano State Tech Summits which took place in Dawanau and in Hadejia</li>
+            </ul>
+        </div>
+        <div class="past-images">
+            <img src="./img/past-image-1.svg" alt="" class="see-the-past-pic">
+            <img src="./img/past-image-2.svg" alt="" class="see-the-past-pic">
+        </div>
+    </section>
     <div class="partner">
         <div class="partner-header">
             <h3 class="partner-text">Partners</h3>
@@ -89,9 +92,19 @@
         </div>
     </div>
     <footer>
-        <div class="footer">
-            <img class="global-minbar-logo" src="./img/global_minbar.png" alt="global minbar logo">
-            <h3 class="footer-text">2023 Global Minbar Creative Design. Some Rights Reserved.</h3>
+        <div class="footer-about-desktop">
+            <img class="global-minbar-logo" src="./img/cck-logo1 1(1).svg" alt="global minbar logo">
+            <div class="footer-about-text-two">
+                <h3 class="footer-text-one">2023 Global Minbar Creative Design. Some Rights Reserved.</h3>
+                <h3 class="footer-text-two">달리 정하지 않은 웹사이트의 모든 내용은 크리에이티브 커먼즈 저작자표시 2.0 대한민국 라이선스에 따라 이용할 수 있습니다.
+                자세한 이용기능 내용과 허락조건은 http://creativecommons.org/licences/by/2.0/kr 를 보세요.</h3>
+            </div>
+        </div>
+        <div class="footer-about-mobile">
+            <img class="global-minbar-logo" src="./img/cck-logo1 1.svg" alt="global minbar logo">
+            <div class="footer-about-text-two">
+                <h3 class="footer-text-one">2023 Global Minbar Creative Design. Some Rights Reserved.</h3>
+            </div>
         </div>
     </footer>
 </body>
