fix clip footer section

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
             <img src="./img/past-image-2.svg" alt="" class="see-the-past-pic">
         </div>
     </section>
-    <div class="partner">
+    <div class="partner about-partner">
         <div class="partner-header">
             <h3 class="partner-text">Partners</h3>
             <i class="fa-solid fa-horizontal-rule fa-horizontal-rule-red"></i>
