Make changes as requested by reviewer

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8361b8a285.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
     <title>About</title>
 </head>
 <body>
@@ -33,6 +34,37 @@
     </section>
     <section>
         <div class="background-about-picture">
+            <nav>
+                <div class="nav-bar">
+                    <div class="nav-icon">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                </div>
+                <div class="slide-menu-background active">
+                    <div class="div-menu-close">
+                        <i class="fa-solid fa-xmark fa-2x menu-close"></i>
+                    </div>
+                    <ul id="slide-menu-items">
+                        <li class="menu">
+                            <a class="side-menu" href="index.html">Home</a>
+                        </li>
+                        <li class="menu">
+                            <a class="side-menu" href="about.html">About</a>
+                        </li>
+                        <li class="menu">
+                            <a class="side-menu" href="#program">Program</a>
+                        </li>
+                        <li class="menu">
+                            <a class="side-menu" href="#join">Join</a>
+                        </li>
+                        <li class="menu">
+                            <a class="side-menu" href="#sponsor">Sponsor</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
             <div class="header-section">
                 <h1 class="hello-about">"Hello! Sharing world"</h1>
                 <h2 class="main-header-text-about">Kano state <br> tech summit 2015</h2>
@@ -62,7 +94,7 @@
             <li class="creative-common-text-two-desktop">The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July.
                 After online public voting and Selection Committee’s judging process, the logo from Naresh Agrawal won the prize.
                 After consultation with Mr. Agrawal, we optimized the prize-winning-logo for this year’s summit as follows:</li>
-            <li><img src="./img/global-summit-logo.png" alt="" class="global-summit-logo"></li>
+            <li class="logo-flex"><img src="./img/global-summit-logo.png" alt="" class="global-summit-logo"></li>
         </ul>
         <div class="see-the-past">
             <ul class="see-the-past-items">
