--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
         </div>
         <footer>
-            <div class="footer">
+            <div class="footer footer-hide">
                 <img class="global-minbar-logo" src="./img/global_minbar.png" alt="global minbar logo">
                 <h3 class="footer-text">2023 Global Minbar Creative Design. Some Rights Reserved.</h3>
             </div>
